Fix horizontal scroll on Technology page

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -44,7 +44,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 15px 30px;
+      padding: 50px;
       gap: 30px;
       height: 100%;
       justify-content: center;
@@ -95,6 +95,7 @@
           padding: 25px 0;
           position: relative;
           display: inline-flex;
+          gap: 0 5px;
 
           &::after {
             content: "";
@@ -110,10 +111,6 @@
           &:hover::after, &.active::after {
             width: 100%;
           }
-        }
-
-        .number {
-          display: none;
         }
       }
     }
