--- a/src/styles/Technology.scss
+++ b/src/styles/Technology.scss
@@ -16,8 +16,8 @@
       height: auto;
       object-fit: contain;
       width: 100vw;
-      margin-left: calc(-50vw + ((100% + 20px) / 2));
-      margin-right: calc(-50vw + ((100% + 20px) / 2));
+      margin-left: calc(-50vw + (100% / 2));
+      margin-right: calc(-50vw + (100% / 2));
       max-width: unset;
     }
 
